--- a/styles.css
+++ b/styles.css
@@ -97,6 +97,15 @@ body{
     margin: 20px 0 10px 0;
 }
 
+footer{
+    width: 100%;
+    height: 40px;
+    text-align: center;
+    color: #fff;
+    padding: 10px;
+    background-color: #D33737;
+    margin-top: 10px;
+}
 
 @media only screen and (max-width: 700px) {
     #logo{
