--- a/styles.css
+++ b/styles.css
@@ -105,6 +105,7 @@ footer{
     padding: 10px;
     background-color: #D33737;
     margin-top: 10px;
+    font-size: 12px;
 }
 
 @media only screen and (max-width: 700px) {
